# python-demo

./: .gitignore  AGENTS.MD  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: auto-merge-dependabot-simple.yml  autofix.yml  ci.yml  deploy-docs.yml
scripts/: README.md  generate_machine_artifacts.py  repo_loop.py
tests/: test_main.py  test_repo_loop.py
website/: .npmrc  .prettierignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
website/docs/: getting-started.md  intro.md
website/docs/api/: books.md
website/docs/auth/: entra-id.md  jwt-bearer.md  managed-identity.md  overview.md
website/docs/deployment/: aks.md  app-service.md  aws-ecs-fargate.md  aws-eks.md  aws-lambda.md  aws.md  azure-functions.md  gcp-app-engine.md  gcp-cloud-run.md  gcp-gke.md  gcp.md  index.md
website/src/components/: AuthPatternsSection.tsx  FeatureGrid.tsx  HomepageHero.tsx  HostingSection.tsx  QuickStartSection.tsx
website/src/css/: custom.css
website/src/pages/: index.tsx
website/src/theme/: Root.tsx  muiTheme.ts
website/static/: docs-index.json  llms.txt  openapi.json
