[project]
name = "python-demo"
version = "0.1.0"
description = "A colorful FastAPI server with rich logging and background traffic generation"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [{name = "Jared Thivener"}]

dependencies = [
    "fastapi==0.122.0",
    "uvicorn[standard]==0.27.0",
    "httpx==0.28.1",
    "rich==14.2.0",
]
