[project]
name = "python-demo"
version = "0.1.0"
description = "A colorful FastAPI server with rich logging and background traffic generation"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [{name = "Jared Thivener"}]

dependencies = [
    "fastapi==0.128.8",
    "uvicorn[standard]==0.40.0",
    "httpx==0.28.1",
    "rich==14.3.2",
]
