[project]
name = "python-demo"
version = "0.1.0"
description = "A colorful FastAPI server with rich logging and background traffic generation"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [{name = "Jared Thivener"}]

dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "httpx==0.28.1",
    "rich==14.3.3",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff>=0.15.6",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/test_main.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
